feat: Implement Google authentication service with token exchange and ID token verification
- Added GoogleAuthService for handling Google OAuth2 token exchange and ID token verification.
- Implemented error handling for null or empty authorization code and code verifier.
- Created JwtService for generating JWT tokens with user information.
- Developed UserService to process Google user information and manage user identities.
- Updated application properties for H2 database configuration for testing.
- Added unit tests for GoogleAuthService, JwtService, UserService, and repository classes.
- Created integration tests for AuthController to validate callback handling.
- Introduced CallbackRequestDto for managing callback request data.
- Implemented user entity and identity entity tests to ensure correct behavior.